Better directory structure

--- a/index.html
+++ b/index.html
@@ -2,21 +2,12 @@
 <html manifest="manifest.php">
 <head>
 	<meta charset="UTF-8"/>
-	<link rel="apple-touch-startup-image" href="CookiePlusSplash2.png" />
+	<link rel="apple-touch-startup-image" href="img/CookiePlusSplash2.png" />
 	<link rel="stylesheet" href="jqtouch/themes/css/jqtouch.css" title="jQTouch" />
-	<link rel="stylesheet" href="CookiePlus.css" />
+	<link rel="stylesheet" href="style/CookiePlus.css" />
 	<script src="jqtouch/src/lib/zepto.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jqtouch/src/jqtouch.js" type="text/javascript" charset="utf-8"></script>
-	<script type="text/javascript" src="CookiePlus.js"></script>
-	<script type="text/javascript">
-		$('a[target="_blank"]').bind('click', function() {
-	       	if (confirm('This link opens in a new window.')) {
-	            return true;
-	        } else {
-	            return false;
-	        }
-	    });
-	</script>
+	<script type="text/javascript" src="script/CookiePlus.js"></script>
 	<style type="text/css">
 		p.detail {
 			text-align:center;
