--- a/changelog.html
+++ b/changelog.html
@@ -12,6 +12,11 @@
 <body>
 	<h1>Cookie+ Changelog</h1>
 	<br />
+	<h2>Version &alpha;1.3</h2>
+	<ul>
+		<li>Uploaded to GitHub</li>
+		<li>Many minor changes</li>
+	</ul>
 	<h2>Version &alpha;1.2</h2>
 	<ul>
 		<li>Added offline support, then fixed it (I forgot the .htaccess file)</li>
