--- a/changelog.html
+++ b/changelog.html
@@ -12,6 +12,10 @@
 <body>
 	<h1>Cookie+ Changelog</h1>
 	<br />
+	<h2>Version &alpha;1.4</h2>
+	<ul>
+		<li>Updated to fully comply with HTML5</li>
+	</ul>
 	<h2>Version &alpha;1.3</h2>
 	<ul>
 		<li>Uploaded to GitHub</li>
