--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="jqtouch/src/jqtouch.js" charset="utf-8"></script>
 	<script src="script/CookiePlus.js" charset="utf-8"></script>
 	<title>Cookie+</title>
+	<!--Version &alpha;1.3-->
 </head>
 <body>
 	<div id="jqt">
