adding address field

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 				<ul class="rounded">
 					<li><input type="text" id="fName" name="fName" autocorrect="off" placeholder="First Name"/></li>
 					<li><input type="text" id="lName" name="lName" autocorrect="off" placeholder="Last Name" /></li>
+					<li><input type="text" id="addr" name="addr" autocorrect="off" placeholder="Address" pattern="[0-9]{3,4} [A-z ']+" /></li>
 					<li class="arrow" id="cookieAdd"><a href="#addBuyer" id="cookieControl">Add Cookies</a></li>
 				</ul>
 				<input type="submit" class="grayButton submit" name="action" value="Save Changes" />
