Fixed inconsistant naming

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<script src="jqtouch/src/lib/zepto.js" charset="utf-8"></script>
 	<script src="jqtouch/src/jqtouch.js" charset="utf-8"></script>
 	<script src="script/CookiePlus.js" charset="utf-8"></script>
-	<title>Cookie+</title>
+	<title>CookiePlus</title>
 	<!--Version &alpha;1.3-->
 </head>
 <body>
 	<div id="jqt">
 		<section id="home">
 			<header class="toolbar">
-				<h1>Cookie+</h1>
+				<h1>CookiePlus</h1>
 				<a class="button slideup" id="infoButton" href="#about">About</a>
 			</header>
 			<h2>Manage</h2>
@@ -36,7 +36,7 @@
 				<p class="detail">
 					<br />
 					<br />
-					Cookie+ is a web app designed to<br>
+					CookiePlus is a web app designed to<br>
 					make managing Girl Scout Cookie<br>
 					delivery much easier.
 				</p>
