--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cookie+ Changelog</title>
+	<title>CookiePlus Changelog</title>
 	<style>
 		@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
 		body {
@@ -10,7 +10,7 @@
 	</style>
 </head>
 <body>
-	<h1>Cookie+ Changelog</h1>
+	<h1>CookiePlus Changelog</h1>
 	<br />
 	<h2>Version &alpha;1.4</h2>
 	<ul>
