--- a/changelog.html
+++ b/changelog.html
@@ -12,6 +12,13 @@
 <body>
 	<h1>CookiePlus Changelog</h1>
 	<br />
+	<h2>Version &alpha;1.5</h2>
+	<ul>
+		<li>Fixed Splash Screen (Undoes letterboxing fix)</li>
+		<li>Updated jQTouch to jQT (New version, name change because of Cease and Desist order)</li>
+		<li>Minor code refactoring</li>
+		<li>Now resets customer add fields after submission</li>
+	</ul>
 	<h2>Version &alpha;1.4</h2>
 	<ul>
 		<li>Updated to fully comply with HTML5</li>
